# TulaHack_2022_Rybov

./: .gitmodules  README.md  index.html
backend/: .gitignore  CMakeLists.txt  README.md  drogonCfg.json  index.html  main.cpp
backend/data/: users_info.db
backend/filters/: CheckLoginFilter.cpp  CheckLoginFilter.h  CommonFilters.cpp  CommonFilters.h  TimeoutFilter.cpp  TimeoutFilter.h
backend/general_src/: Error.h  JsonResponse.h
backend/handlers/: ContentController.h  LoginController.h  RatesController.h  RedirectController.cpp  RedirectController.h  UserController.h
client/: package-lock.json  package.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/Popups/: Popup.vue  PopupChooseGenres.vue
frontend/src/components/blocks/: MovieCard.vue
frontend/src/components/layout/: Aside.vue  Browser.vue  HomeAside.vue
frontend/src/mixins/: api.js  cookie.js
frontend/src/router/: index.js
frontend/src/views/: Auth.vue  FilmDetail.vue  Home.vue  MovieDetail.vue  NewRoom.vue  Room.vue  UserProfile.vue
